--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,14 +11,47 @@ server:
 
 spring:
   data:
-    mongodb:
-      uri: mongodb://172.18.4.117:27017/Test
+    mongodb: 
+        uri: mongodb://localhost:27017/Test
+    mysql: 
+        primary: 
+          name: test1
+          url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+          username: root
+          password: niekang
+          driverClassName: com.mysql.jdbc.Driver
+        secondary: 
+          name: test2
+          url: jdbc:mysql://localhost:3306/test2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+          username: root
+          password: niekang
+#          driver-class-name: com.mysql.jdbc.Driver  
+        # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select '1'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20       
   elastic: 
-    host: 172.18.4.117
-    port: 9300    
+    host: 172.18.4.117 
+    port: 9300       
          
 logging.config:
      classpath:logback.xml
+     
+
+
+     
           
 #spring.elastic.port: 172.18.4.117
 #spring.elastic.port: 9300   
